fixing background stuff to make the page sctualyl scroll.. especially important on mobile devices

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -50,7 +50,7 @@ border-spacing: 0;
 body {
   font-size: 1em;
   line-height: 1.5;
-  bbackground: #e7e7e7 url(../images/highlight-bg.jpg) 50% 0 no-repeat;
+  background: #888888 url(../images/ifly-tunnel1.jpg) 50% 0 no-repeat;
   font-family: 'Helvetica Neue', Helvetica, Arial, serif;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
   color: #6d6d6d;
